Closed
Bug 495507
Opened 16 years ago
Closed 16 years ago
audio in video skips badly
Categories
(Core :: Audio/Video, defect)
Core
Audio/Video
Tracking
()
VERIFIED
FIXED
mozilla1.9.2a1
People
(Reporter: blizzard, Assigned: cpearce)
References
()
Details
(Keywords: regression, verified1.9.1)
Attachments
(1 file)
|
2.76 KB,
patch
|
cajbir
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Verified on Mac OSX and Windows.
The audio in the url above video skips badly and is out of sync with the video. Other videos appear to be working OK. And it works fine in VLC on the mac.
ogginfo on this file says:
Processing file "subtitle.ogv"...
New logical stream (#1, serial: 69ce8c59): type unknown
New logical stream (#2, serial: 4f2caf09): type theora
New logical stream (#3, serial: 764a9543): type vorbis
Theora headers parsed for stream 2, information follows...
Version: 3.2.1
Vendor: Xiph.Org libTheora I 20071025 3 2 1
Width: 432
Height: 240
Total image: 432 by 240, crop offset (0, 0)
Framerate 60000/1001 (59.94 fps)
Aspect ratio undefined
Colourspace unspecified
Pixel format 4:2:0
Target bitrate: 0 kbps
Nominal quality setting (0-63): 32
User comments section follows...
ENCODER=ffmpeg2theora 0.21
Vorbis headers parsed for stream 3, information follows...
Version: 0
Vendor: Xiph.Org libVorbis I 20070622
Channels: 2
Rate: 48000
Nominal bitrate: 80.000000 kb/s
Upper bitrate not set
Lower bitrate not set
User comments section follows...
ENCODER=ffmpeg2theora 0.21
Logical stream 1 ended
Warning: EOS not set on stream 2
Theora stream 2:
Total data length: 818791 bytes
Playback length: 0m:11.745s
Average bitrate: 557.708879 kb/s
Warning: EOS not set on stream 3
Vorbis stream 3:
Total data length: 104577 bytes
Playback length: 0m:11.809s
Average bitrate: 70.843627 kb/s
Comment 1•16 years ago
|
||
This is reproducible with a current trunk build on FreeBSD.
Setting version --> trunk and platform --> all
OS: Mac OS X → All
Hardware: x86 → All
Version: 1.9.1 Branch → Trunk
Comment 2•16 years ago
|
||
another example clip of choppy audio:
http://metavidstorage01.ucsc.edu/media/house_proceeding_03-16-09.ogg
plays fine with vlc. Running build 2009060
| Reporter | ||
Comment 3•16 years ago
|
||
Hard to tell how much exposure we have, but it's a really annoying bug. We might want to block on this.
| Reporter | ||
Updated•16 years ago
|
Flags: blocking1.9.1?
| Reporter | ||
Comment 4•16 years ago
|
||
Note that this video played smoothly on 3.5b4.
Keywords: regression,
regressionwindow-wanted
Chris P should be able to look at this.
Assignee: nobody → chris
| Assignee | ||
Comment 6•16 years ago
|
||
m-c windows nightly 2009-05-18-13 is ok.
m-c windows nightly 2009-05-19-04 contains the bug.
So regression range is: http://hg.mozilla.org/mozilla-central/pushloghtml?startdate=2009-05-18+13%3A00%3A00&enddate=2009-05-19+04%3A00%3A00
Comment 7•16 years ago
|
||
Bug 493673 maybe?
| Assignee | ||
Comment 8•16 years ago
|
||
(In reply to comment #7)
> Bug 493673 maybe?
Spot on. That's it.
Keywords: regressionwindow-wanted
Updated•16 years ago
|
Flags: blocking1.9.1? → blocking1.9.1+
| Assignee | ||
Comment 9•16 years ago
|
||
* Only send blank audio data if a previously active audio track has become inactive, not if there's no audio data in the current frame of an active track. I assume that liboggplay will send us the audio data that needs to be sent to the audio hardware in each frame...
* Mochitests pass on Mac and Windows.
* All videos linked in this bug and bug 493673 a/v sync correctly.
Attachment #380971 -
Flags: superreview?(roc)
Attachment #380971 -
Flags: review?(chris.double)
Updated•16 years ago
|
Attachment #380971 -
Flags: review?(chris.double) → review+
Attachment #380971 -
Flags: superreview?(roc) → superreview+
Can you guys land this on trunk ASAP? Thanks!!!
Keywords: checkin-needed
Whiteboard: [needs landing]
| Assignee | ||
Comment 11•16 years ago
|
||
Pushed to m-c: http://hg.mozilla.org/mozilla-central/rev/6676f2bc266c
Keywords: checkin-needed
Whiteboard: [needs landing] → [baking for 1.9.1]
Whiteboard: [baking for 1.9.1] → [baking for 1.9.1][needs landing]
Whiteboard: [baking for 1.9.1][needs landing] → [baking for 1.9.1][needs 191 landing]
| Assignee | ||
Comment 12•16 years ago
|
||
Pushed to 1.9.1: http://hg.mozilla.org/releases/mozilla-1.9.1/rev/530583e9f95d
Whiteboard: [baking for 1.9.1][needs 191 landing]
Comment 13•16 years ago
|
||
resolving fixed/fixed1.9.1 as per comment 11 and comment 12
Verified fixed on 1.9.1 with builds on all platforms:
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1pre) Gecko/20090604 Shiretoko/3.5pre ID:20090604031153
Keywords: fixed1.9.1 → verified1.9.1
Target Milestone: --- → mozilla1.9.2a1
You need to log in
before you can comment on or make changes to this bug.
Description
•